crates/codegen/tests/snapshots/codegen_snapshots__openapi_generation_multiple_models.snap
---
source: crates/codegen/tests/codegen_snapshots.rs
assertion_line: 1645
expression: result.code
---
{
  "components": {
    "schemas": {
      "Post": {
        "description": "Post model",
        "properties": {
          "id": {
            "format": "uuid",
            "type": "string"
          },
          "title": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "title"
        ],
        "type": "object"
      },
      "User": {
        "description": "User model",
        "properties": {
          "id": {
            "format": "uuid",
            "type": "string"
          }
        },
        "required": [
          "id"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "description": "Auto-generated from a ForgeDB schema. Describes the REST surface emitted by the ForgeDB code generator.",
    "title": "ForgeDB Generated API",
    "version": "1.0.0"
  },
  "openapi": "3.0.3",
  "paths": {
    "/api/post": {
      "get": {
        "operationId": "listPost",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "data": {
                      "items": {
                        "$ref": "#/components/schemas/Post"
                      },
                      "type": "array"
                    }
                  },
                  "type": "object"
                }
              }
            },
            "description": "List of Post"
          }
        },
        "summary": "List all Post",
        "tags": [
          "Post"
        ]
      },
      "post": {
        "operationId": "createPost",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/Post"
              }
            }
          },
          "required": true
        },
        "responses": {
          "201": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "id": {
                      "type": "string"
                    }
                  },
                  "type": "object"
                }
              }
            },
            "description": "Post created"
          },
          "422": {
            "description": "Invalid payload"
          }
        },
        "summary": "Create new Post",
        "tags": [
          "Post"
        ]
      }
    },
    "/api/post/{id}": {
      "delete": {
        "operationId": "deletePost",
        "responses": {
          "204": {
            "description": "Post deleted"
          },
          "400": {
            "description": "Invalid id"
          },
          "404": {
            "description": "Not found"
          }
        },
        "summary": "Delete Post by ID",
        "tags": [
          "Post"
        ]
      },
      "get": {
        "operationId": "getPost",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Post"
                }
              }
            },
            "description": "Post"
          },
          "400": {
            "description": "Invalid id"
          },
          "404": {
            "description": "Not found"
          }
        },
        "summary": "Get Post by ID",
        "tags": [
          "Post"
        ]
      },
      "parameters": [
        {
          "description": "Identity of the Post",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string"
          }
        }
      ],
      "put": {
        "operationId": "replacePost",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/Post"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "id": {
                      "type": "string"
                    }
                  },
                  "type": "object"
                }
              }
            },
            "description": "Post replaced"
          },
          "400": {
            "description": "Invalid id"
          },
          "404": {
            "description": "Not found"
          },
          "422": {
            "description": "Invalid payload"
          }
        },
        "summary": "Replace Post by ID",
        "tags": [
          "Post"
        ]
      }
    },
    "/api/user": {
      "get": {
        "operationId": "listUser",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "data": {
                      "items": {
                        "$ref": "#/components/schemas/User"
                      },
                      "type": "array"
                    }
                  },
                  "type": "object"
                }
              }
            },
            "description": "List of User"
          }
        },
        "summary": "List all User",
        "tags": [
          "User"
        ]
      },
      "post": {
        "operationId": "createUser",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/User"
              }
            }
          },
          "required": true
        },
        "responses": {
          "201": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "id": {
                      "type": "string"
                    }
                  },
                  "type": "object"
                }
              }
            },
            "description": "User created"
          },
          "422": {
            "description": "Invalid payload"
          }
        },
        "summary": "Create new User",
        "tags": [
          "User"
        ]
      }
    },
    "/api/user/{id}": {
      "delete": {
        "operationId": "deleteUser",
        "responses": {
          "204": {
            "description": "User deleted"
          },
          "400": {
            "description": "Invalid id"
          },
          "404": {
            "description": "Not found"
          }
        },
        "summary": "Delete User by ID",
        "tags": [
          "User"
        ]
      },
      "get": {
        "operationId": "getUser",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/User"
                }
              }
            },
            "description": "User"
          },
          "400": {
            "description": "Invalid id"
          },
          "404": {
            "description": "Not found"
          }
        },
        "summary": "Get User by ID",
        "tags": [
          "User"
        ]
      },
      "parameters": [
        {
          "description": "Identity of the User",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string"
          }
        }
      ],
      "put": {
        "operationId": "replaceUser",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/User"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "id": {
                      "type": "string"
                    }
                  },
                  "type": "object"
                }
              }
            },
            "description": "User replaced"
          },
          "400": {
            "description": "Invalid id"
          },
          "404": {
            "description": "Not found"
          },
          "422": {
            "description": "Invalid payload"
          }
        },
        "summary": "Replace User by ID",
        "tags": [
          "User"
        ]
      }
    }
  },
  "servers": [
    {
      "description": "Local generated server",
      "url": "http://localhost:3000"
    }
  ]
}
