crates/codegen/tests/snapshots/codegen_snapshots__python_sdk_generation_snapshot.snap
---
source: crates/codegen/tests/codegen_snapshots.rs
expression: code
---
# Generated by ForgeDB — DO NOT EDIT
#
# Python REST client SDK for a ForgeDB app. A transport client over the generated
# REST API; it interprets no schema at runtime. Standard library only.
from __future__ import annotations

import json
import urllib.error
import urllib.parse
import urllib.request
from dataclasses import asdict, dataclass
from enum import Enum
from typing import Any, Generic, List, Optional, TypeVar

class Role(str, Enum):
    """Role — serialized as its variant-name string."""
    Admin = "Admin"
    Member = "Member"
    Guest = "Guest"


@dataclass
class Account:
    """Account — mirrors the wire shape of the generated model."""
    id: str
    email: str
    role: Role
    balance: str
    login_count: int
    created_at: int
    metadata: Any = None
    bio: Optional[str] = None
    projects: Any = None


@dataclass
class AccountCreate:
    """Input to create_account — a Account without server-synthesized (+uuid/+timestamp) fields."""
    email: str
    role: Role
    balance: str
    login_count: int
    metadata: Any = None
    bio: Optional[str] = None
    projects: Any = None


@dataclass
class AccountSummary:
    """Projection `summary` of Account — PK + declared columns only."""
    id: str
    email: str
    role: Role


@dataclass
class Project:
    """Project — mirrors the wire shape of the generated model."""
    id: str
    name: str
    owner: str
    reviewer: Optional[str] = None
    tags: Any = None
    priority: Optional[int] = None


@dataclass
class ProjectCreate:
    """Input to create_project — a Project without server-synthesized (+uuid/+timestamp) fields."""
    name: str
    owner: str
    reviewer: Optional[str] = None
    tags: Any = None
    priority: Optional[int] = None


@dataclass
class ProjectCard:
    """Projection `card` of Project — PK + declared columns only."""
    id: str
    name: str


@dataclass
class AuditEvent:
    """AuditEvent — mirrors the wire shape of the generated model."""
    id: str
    kind: str
    at: int


@dataclass
class AuditEventCreate:
    """Input to create_audit_event — a AuditEvent without server-synthesized (+uuid/+timestamp) fields."""
    kind: str


class ForgeDbError(Exception):
    """Raised on any non-2xx response (except a get/update/delete 404, surfaced as
    None/False) and on transport failures (status == 0). Carries the HTTP status
    and the parsed {error} body when present."""

    def __init__(self, status: int, message: str, body: Any = None) -> None:
        super().__init__(f"ForgeDB error (status {status}): {message}")
        self.status = status
        self.message = message
        self.body = body


T = TypeVar("T")


@dataclass
class ListResult(Generic[T]):
    """A page of list results — mirrors the REST list response envelope."""

    data: List[T]
    total: int
    limit: int
    offset: int


@dataclass
class ListOptions:
    """Options for a list query. `filter` holds exact-match ?field=value pairs
    matched by the generated per-model filter server-side."""

    limit: Optional[int] = None
    offset: Optional[int] = None
    sort: Optional[str] = None
    order: Optional[str] = None  # "asc" | "desc"
    filter: Optional[dict] = None


def _seg(value: object) -> str:
    """Percent-encode one URL path segment."""
    return urllib.parse.quote(str(value), safe="")


class ForgeDbClient:
    """A typed client for a ForgeDB app's REST API."""

    def __init__(self, base_url: str = "http://localhost:3000") -> None:
        # Trim a trailing slash so path concatenation is unambiguous.
        self.base_url = base_url.rstrip("/")

    def _request(self, method: str, path: str, query=None, body=None):
        """Perform a request; return (status, raw_bytes). Raises ForgeDbError on a
        transport failure (never on an HTTP status — the caller decides)."""
        url = self.base_url + path
        if query:
            qs = urllib.parse.urlencode(query)
            if qs:
                url += "?" + qs
        data = None
        headers = {}
        if body is not None:
            data = json.dumps(body).encode("utf-8")
            headers["Content-Type"] = "application/json"
        req = urllib.request.Request(url, data=data, headers=headers, method=method)
        try:
            with urllib.request.urlopen(req) as resp:
                return resp.status, resp.read()
        except urllib.error.HTTPError as e:
            return e.code, e.read()
        except urllib.error.URLError as e:
            raise ForgeDbError(0, str(e.reason)) from e

    @staticmethod
    def _assert_ok(status: int, raw: bytes) -> None:
        if 200 <= status < 300:
            return
        body = None
        message = f"HTTP {status}"
        try:
            body = json.loads(raw)
            if isinstance(body, dict) and "error" in body:
                message = str(body["error"])
        except Exception:
            pass
        raise ForgeDbError(status, message, body)

    @staticmethod
    def _list_query(options: Optional[ListOptions]) -> dict:
        q: dict = {}
        if options is None:
            return q
        if options.limit is not None:
            q["limit"] = options.limit
        if options.offset is not None:
            q["offset"] = options.offset
        if options.sort is not None:
            q["sort"] = options.sort
        if options.order is not None:
            q["order"] = options.order
        if options.filter:
            for k, v in options.filter.items():
                q[k] = v
        return q

    def get_account(self, id: str) -> Optional[Account]:
        """Get a Account by id, or None if it does not exist."""
        status, raw = self._request("GET", f"/api/account/{_seg(id)}")
        if status == 404:
            return None
        self._assert_ok(status, raw)
        return Account(**json.loads(raw))

    def list_account(self, options: Optional[ListOptions] = None) -> ListResult:
        """List Account rows with optional pagination, sort, and exact-match filters."""
        status, raw = self._request("GET", "/api/account", query=self._list_query(options))
        self._assert_ok(status, raw)
        payload = json.loads(raw)
        return ListResult(
            data=[Account(**row) for row in payload["data"]],
            total=payload["total"], limit=payload["limit"], offset=payload["offset"],
        )

    def create_account(self, data: AccountCreate) -> str:
        """Create a Account; return the new id. Raises ForgeDbError on 422/409."""
        status, raw = self._request("POST", "/api/account", body=asdict(data))
        self._assert_ok(status, raw)
        return json.loads(raw)["id"]

    def update_account(self, id: str, data: Account) -> bool:
        """Replace a Account by id (whole-record PUT). False if absent."""
        status, raw = self._request("PUT", f"/api/account/{_seg(id)}", body=asdict(data))
        if status == 404:
            return False
        self._assert_ok(status, raw)
        return True

    def delete_account(self, id: str) -> bool:
        """Delete a Account by id. True if deleted, False if absent; raises (409) on restrict."""
        status, raw = self._request("DELETE", f"/api/account/{_seg(id)}")
        if status == 404:
            return False
        self._assert_ok(status, raw)
        return True

    def get_account_summary(self, id: str) -> Optional[AccountSummary]:
        """Get the `summary` projection of a Account by id (None if absent)."""
        status, raw = self._request("GET", f"/api/account/{_seg(id)}", query={"projection": "summary"})
        if status == 404:
            return None
        self._assert_ok(status, raw)
        return AccountSummary(**json.loads(raw))

    def list_account_summary(self, options: Optional[ListOptions] = None) -> ListResult:
        """List Account rows as the `summary` projection (PK + declared columns)."""
        query = self._list_query(options)
        query["projection"] = "summary"
        status, raw = self._request("GET", "/api/account", query=query)
        self._assert_ok(status, raw)
        payload = json.loads(raw)
        return ListResult(
            data=[AccountSummary(**row) for row in payload["data"]],
            total=payload["total"], limit=payload["limit"], offset=payload["offset"],
        )

    def get_project(self, id: str) -> Optional[Project]:
        """Get a Project by id, or None if it does not exist."""
        status, raw = self._request("GET", f"/api/project/{_seg(id)}")
        if status == 404:
            return None
        self._assert_ok(status, raw)
        return Project(**json.loads(raw))

    def list_project(self, options: Optional[ListOptions] = None) -> ListResult:
        """List Project rows with optional pagination, sort, and exact-match filters."""
        status, raw = self._request("GET", "/api/project", query=self._list_query(options))
        self._assert_ok(status, raw)
        payload = json.loads(raw)
        return ListResult(
            data=[Project(**row) for row in payload["data"]],
            total=payload["total"], limit=payload["limit"], offset=payload["offset"],
        )

    def create_project(self, data: ProjectCreate) -> str:
        """Create a Project; return the new id. Raises ForgeDbError on 422/409."""
        status, raw = self._request("POST", "/api/project", body=asdict(data))
        self._assert_ok(status, raw)
        return json.loads(raw)["id"]

    def update_project(self, id: str, data: Project) -> bool:
        """Replace a Project by id (whole-record PUT). False if absent."""
        status, raw = self._request("PUT", f"/api/project/{_seg(id)}", body=asdict(data))
        if status == 404:
            return False
        self._assert_ok(status, raw)
        return True

    def delete_project(self, id: str) -> bool:
        """Delete a Project by id. True if deleted, False if absent; raises (409) on restrict."""
        status, raw = self._request("DELETE", f"/api/project/{_seg(id)}")
        if status == 404:
            return False
        self._assert_ok(status, raw)
        return True

    def get_project_card(self, id: str) -> Optional[ProjectCard]:
        """Get the `card` projection of a Project by id (None if absent)."""
        status, raw = self._request("GET", f"/api/project/{_seg(id)}", query={"projection": "card"})
        if status == 404:
            return None
        self._assert_ok(status, raw)
        return ProjectCard(**json.loads(raw))

    def list_project_card(self, options: Optional[ListOptions] = None) -> ListResult:
        """List Project rows as the `card` projection (PK + declared columns)."""
        query = self._list_query(options)
        query["projection"] = "card"
        status, raw = self._request("GET", "/api/project", query=query)
        self._assert_ok(status, raw)
        payload = json.loads(raw)
        return ListResult(
            data=[ProjectCard(**row) for row in payload["data"]],
            total=payload["total"], limit=payload["limit"], offset=payload["offset"],
        )

    def get_audit_event(self, id: str) -> Optional[AuditEvent]:
        """Get a AuditEvent by id, or None if it does not exist."""
        status, raw = self._request("GET", f"/api/audit-event/{_seg(id)}")
        if status == 404:
            return None
        self._assert_ok(status, raw)
        return AuditEvent(**json.loads(raw))

    def list_audit_event(self, options: Optional[ListOptions] = None) -> ListResult:
        """List AuditEvent rows with optional pagination, sort, and exact-match filters."""
        status, raw = self._request("GET", "/api/audit-event", query=self._list_query(options))
        self._assert_ok(status, raw)
        payload = json.loads(raw)
        return ListResult(
            data=[AuditEvent(**row) for row in payload["data"]],
            total=payload["total"], limit=payload["limit"], offset=payload["offset"],
        )

    def create_audit_event(self, data: AuditEventCreate) -> str:
        """Create a AuditEvent; return the new id. Raises ForgeDbError on 422/409."""
        status, raw = self._request("POST", "/api/audit-event", body=asdict(data))
        self._assert_ok(status, raw)
        return json.loads(raw)["id"]

    def update_audit_event(self, id: str, data: AuditEvent) -> bool:
        """Replace a AuditEvent by id (whole-record PUT). False if absent."""
        status, raw = self._request("PUT", f"/api/audit-event/{_seg(id)}", body=asdict(data))
        if status == 404:
            return False
        self._assert_ok(status, raw)
        return True

    def delete_audit_event(self, id: str) -> bool:
        """Delete a AuditEvent by id. True if deleted, False if absent; raises (409) on restrict."""
        status, raw = self._request("DELETE", f"/api/audit-event/{_seg(id)}")
        if status == 404:
            return False
        self._assert_ok(status, raw)
        return True
