crates/codegen/tests/snapshots/codegen_snapshots__rust_generation_codegen_gaps.snap
---
source: crates/codegen/tests/codegen_snapshots.rs
expression: code
---
//! Generated by ForgeDB
//! DO NOT EDIT - This file is auto-generated
#![allow(dead_code, unused_imports)]
use std::collections::HashMap;
use std::path::{Path, PathBuf};
use forgedb_storage::{FixedColumn, VariableColumn, Tombstones};
use forgedb_types::{Uuid, Timestamp, Value};
use serde::{Deserialize, Serialize};
use utoipa::ToSchema;
///GeoPoint embedded struct
#[repr(C)]
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct GeoPoint {
    pub latitude: f64,
    pub longitude: f64,
}
///Place model
#[repr(C)]
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct Place {
    pub id: u64,
    pub name: String,
    pub description: Option<String>,
    pub location: GeoPoint,
}
///Storage for Place model
pub struct PlaceStorage {
    id_to_row: HashMap<u64, usize>,
    row_count: usize,
    id_col: FixedColumn,
    name_col: VariableColumn,
    description_col: VariableColumn,
    location_col: FixedColumn,
    tombstones: forgedb_storage::Tombstones,
}
impl PlaceStorage {
    pub fn new() -> Self {
        Self {
            id_to_row: HashMap::new(),
            row_count: 0,
            id_col: FixedColumn::new(PathBuf::from("place/fixed/u64_0.bin"), 8usize)
                .expect("Failed to create fixed column"),
            name_col: VariableColumn::new(
                    PathBuf::from("place/variable/string_data_1.bin"),
                    PathBuf::from("place/variable/string_offsets_1.bin"),
                )
                .expect("Failed to create variable column"),
            description_col: VariableColumn::new(
                    PathBuf::from("place/variable/string_data_2.bin"),
                    PathBuf::from("place/variable/string_offsets_2.bin"),
                )
                .expect("Failed to create variable column"),
            location_col: FixedColumn::new(
                    PathBuf::from("place/fixed/bytes_3.bin"),
                    std::mem::size_of::<GeoPoint>(),
                )
                .expect("Failed to create fixed column"),
            tombstones: forgedb_storage::Tombstones::new(
                    PathBuf::from("place/tombstones.bin"),
                )
                .expect("Failed to create tombstones"),
        }
    }
    pub fn insert(&mut self, record: Place) -> u64 {
        let row_index = self.row_count;
        let id = record.id;
        self.id_col.append_u64(record.id).expect("Failed to append to column");
        self.name_col.append_string(&record.name).expect("Failed to append string");
        {
            let encoded = match &record.description {
                Some(s) => {
                    let mut e = String::with_capacity(s.len() + 1);
                    e.push('\u{1}');
                    e.push_str(s);
                    e
                }
                None => String::from('\u{0}'),
            };
            self.description_col
                .append_string(&encoded)
                .expect("Failed to append string");
        }
        {
            let bytes = unsafe {
                std::slice::from_raw_parts(
                    &record.location as *const _ as *const u8,
                    std::mem::size_of_val(&record.location),
                )
            };
            self.location_col.append_bytes(bytes).expect("Failed to append to column");
        }
        self.tombstones.append(false).expect("Failed to append tombstone");
        self.id_to_row.insert(id, row_index);
        self.row_count += 1;
        id
    }
    pub fn get(&self, id: u64) -> Option<Place> {
        let row_index = *self.id_to_row.get(&id)?;
        if self.tombstones.is_deleted(row_index).unwrap_or(true) {
            return None;
        }
        let id_value = self
            .id_col
            .read_u64(row_index)
            .expect("Failed to read from column");
        let name_value = self
            .name_col
            .read_string(row_index)
            .expect("Failed to read string");
        let description_value = {
            let raw = self
                .description_col
                .read_string(row_index)
                .expect("Failed to read string");
            if raw.as_bytes().first() == Some(&1u8) {
                Some(raw[1..].to_string())
            } else {
                None
            }
        };
        let location_value: GeoPoint = {
            let bytes = self
                .location_col
                .read_bytes(row_index)
                .expect("Failed to read from column");
            unsafe { std::ptr::read_unaligned(bytes.as_ptr() as *const GeoPoint) }
        };
        Some(Place {
            id: id_value,
            name: name_value,
            description: description_value,
            location: location_value,
        })
    }
    /// Return every live (non-deleted) record.  Used by generated
    /// reverse-relation traversal helpers, which filter this by a
    /// foreign key.  Order is unspecified (follows the id map).
    pub fn all(&self) -> Vec<Place> {
        let mut records = Vec::new();
        for id in self.id_to_row.keys() {
            if let Some(record) = self.get(*id) {
                records.push(record);
            }
        }
        records
    }
}
/// Main database struct
pub struct Database {
    pub place: PlaceStorage,
}
impl Database {
    pub fn new() -> Self {
        Self { place: PlaceStorage::new() }
    }
}
